[tool.poetry]
name = "eurostar 2024"
version = "0.1.0"
description = ""
authors = ["Kristoffer Nordstrom <kristoffer.nordstrom@northerntest.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14"
requests = "^2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
